--- a/views/newPassenger.ejs
+++ b/views/newPassenger.ejs
@@ -152,7 +152,11 @@
     ></a>
 </div>
 <%- include("partials/footer") %>
-<script type="text/javascript" src="./passenger.js"></script>
+<script>
+    let key= '<%- key %>';
+</script>
+<script type="text/javascript" src="./passenger.js">
+</script>
 <!-- <script type="text/javascript" src="./payments.js"></script> -->
 <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 <script>
